Bug 1239386 - add back class attr, the css needed for it, and don't conditionally display the donate link

--- a/media/css/thunderbird/start.less
+++ b/media/css/thunderbird/start.less
@@ -167,6 +167,10 @@ section {
         margin: .7em 0 0;
     }
 
+    a[href$="Contributing"]:before {
+        background-position: -40px -100px;
+    }
+
     a.more {
         .trailing-arrow;
     }
