--- a/bedrock/mozorg/templates/mozorg/home/home-a.html
+++ b/bedrock/mozorg/templates/mozorg/home/home-a.html
@@ -73,7 +73,7 @@
     <ul id="nav-page-primary" class="primary">
       <li id="nav-primary-action"><a href="#action" data-link-type="nav" data-link-name="Mozilla in Action"><span>{{ _('Mozilla In Action') }}</span></a></li>
       <li id="nav-primary-innovation"><a href="#innovation" data-link-type="nav" data-link-name="Web Innovation"><span>{{ _('Web Innovations') }}</span></a></li>
-      <li id="nav-primary-firefox"><a href="#firefox" data-link-type="nav" data-link-name="Firefox"><span>{{ _('Firefox') }}</span></a></li>
+      <li id="nav-primary-firefox"><a href="#firefox" data-link-type="nav" data-link-name="Firefox anchor"><span>{{ _('Firefox') }}</span></a></li>
     </ul>
 
     <ul id="nav-page-secondary" class="secondary">
