--- a/bedrock/thunderbird/templates/thunderbird/start/release.html
+++ b/bedrock/thunderbird/templates/thunderbird/start/release.html
@@ -11,7 +11,7 @@
       <header>
         <h1>{{ self.title() }}</h1>
       </header>
-      {% if false and l10n_has_tag('thunderbird_startpage_donate_2016_06') %}
+      {% if l10n_has_tag('thunderbird_startpage_donate_2016_06') %}
       <div>
         <section>
           <h2>{{ _('Why do we need donations') }}</h2>
@@ -72,7 +72,7 @@
           <ul>
             <li><a href="{{ url('thunderbird.features') }}">{{ _('Features') }}</a></li>
             <li><a href="https://blog.mozilla.org/thunderbird/">{{ _('Visit our blog') }}</a></li>
-            <li><a href="https://donate.mozilla.org/thunderbird/about/">{{ _('Donate') }}</a></li>
+            <li><a href="https://donate.mozilla.org/thunderbird/">{{ _('Donate') }}</a></li>
             <li><a href="https://wiki.mozilla.org/Thunderbird#Contributing">{{ _('Contribute') }}</a></li>
             <li><a href="https://support.mozilla.org/products/thunderbird/how">{{ _('Tips') }}</a></li>
             <li><a href="https://addons.mozilla.org/thunderbird/">{{ _('Add-ons') }}</a></li>
