--- a/media/css/firefox/new/horizon/scene1.less
+++ b/media/css/firefox/new/horizon/scene1.less
@@ -8,94 +8,106 @@
 /**
  * Animation is disabled for now until we get approval from the creative team.
  */
-// .horizonAnimation() {
-//     .horizon {
-//         background-position: 0 120px;
-//     }
-//
-//     .mountains-svg-wrapper {
-//         -webkit-filter: brightness(60%);
-//                 filter: brightness(60%);
-//     }
-//
-//     .sun {
-//         transform: translateY(120px);
-//     }
-//
-//     .mountains-container .highlight {
-//         opacity: 0;
-//     }
-//
-//     // wait until window has loaded before animating.
-//     .loaded {
-//         .horizon {
-//             animation: sky 5s ease-out 1s both;
-//         }
-//         .mountains-svg-wrapper {
-//             animation: sunlight 4s ease-out 2s both;
-//         }
-//         .sun {
-//             animation: sunrise 6s ease-out 0s both;
-//         }
-//         .mountains-container .highlight {
-//             animation: highlight 4s ease-out 2s both;
-//         }
-//     }
-// }
-//
-// /**
-//  * Specific CSS applied when unprefixed animations, unprefixed transformations
-//  * and CSS filter effects are supported.
-//  */
-// @supports (animation-name: sunrise) and (transform:translateY(120px)) and (filter:brightness(60%)) {
-//     .horizonAnimation;
-// }
-//
-// /**
-//  * We need to repeat this block as YUI Compressor does not handle 'or' conditionals
-//  * correctly when minifying :(
-//  */
-// @supports (animation-name: sunrise) and (transform:translateY(120px)) and (-webkit-filter:brightness(60%)) {
-//     .horizonAnimation;
-// }
-//
-// @keyframes sunlight {
-//     0% {
-//         -webkit-filter: brightness(60%);
-//                 filter: brightness(60%);
-//     }
-//     100% {
-//         -webkit-filter: brightness(100%);
-//                 filter: brightness(100%);
-//     }
-// }
-//
-// @keyframes sky {
-//     0% {
-//         background-position: 0 120px;
-//     }
-//     100% {
-//         background-position: 0 0;
-//     }
-// }
-//
-// @keyframes sunrise {
-//     0% {
-//         transform: translateY(120px);
-//     }
-//     100% {
-//         transform: translateY(0);
-//     }
-// }
-//
-// @keyframes highlight {
-//     0% {
-//         opacity: 0;
-//     }
-//     100% {
-//         opacity: 1;
-//     }
-// }
+.horizonAnimation() {
+    main[data-version="1"] {
+        .horizon {
+            background-position: 0 220px;
+        }
+
+        .mountains-svg-wrapper {
+            -webkit-filter: brightness(60%);
+                    filter: brightness(60%);
+        }
+
+        .sun {
+            transform: translateY(140px);
+        }
+
+        .mountains-container .highlight {
+            opacity: 0;
+        }
+    }
+
+    // wait until window has loaded before animating.
+    .loaded main[data-version="1"] {
+        .horizon {
+            animation: sky 5s ease-out 1s both;
+        }
+        .mountains-svg-wrapper {
+            animation: sunlight 4s ease-out 2s both;
+        }
+        .sun {
+            animation: sunrise 6s ease-out 0s both;
+        }
+        .mountains-container .highlight {
+            animation: highlight 4s ease-out 2s both;
+
+            &.delay-1 {
+                animation-delay: 2.7s;
+                animation-duration: 3.3s;
+            }
+
+            &.delay-2 {
+                animation-delay: 3.4s;
+                animation-duration: 2.6s;
+            }
+        }
+    }
+}
+
+/**
+ * Specific CSS applied when unprefixed animations, unprefixed transformations
+ * and CSS filter effects are supported.
+ */
+@supports (animation-name: sunrise) and (transform:translateY(120px)) and (filter:brightness(60%)) {
+    .horizonAnimation;
+}
+
+/**
+ * We need to repeat this block as YUI Compressor does not handle 'or' conditionals
+ * correctly when minifying :(
+ */
+@supports (animation-name: sunrise) and (transform:translateY(120px)) and (-webkit-filter:brightness(60%)) {
+    .horizonAnimation;
+}
+
+@keyframes sunlight {
+    0% {
+        -webkit-filter: brightness(60%);
+                filter: brightness(60%);
+    }
+    100% {
+        -webkit-filter: brightness(100%);
+                filter: brightness(100%);
+    }
+}
+
+@keyframes sky {
+    0% {
+        background-position: 0 220px;
+    }
+    100% {
+        background-position: 0 0;
+    }
+}
+
+@keyframes sunrise {
+    0% {
+        transform: translateY(140px);
+    }
+    100% {
+        transform: translateY(0);
+    }
+}
+
+@keyframes highlight {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
 
 // general version message styling
 .version-message-container {
