[fix bug 1282732] Redesign /plugincheck page to focus on updating key plugins

--- a/media/css/sandstone/buttons.less
+++ b/media/css/sandstone/buttons.less
@@ -23,9 +23,9 @@
 @mozRedHover: #EA3B28;
 @mozRedBorder: #C13832;
 
-@mozOrange: #db8700;
-@mozOrangeHover: #ffbe57;
-@mozOrangeBorder: #db8700;
+@mozOrange: #f26c23;
+@mozOrangeHover: #f5894f;
+@mozOrangeBorder: #e55525;
 
 /* the basis for all buttons on bedrock */
 .base-button {
