[fix bug 1283208] Updates to home page concept A
* update nav to "Powered by People"
* update copy in Firefox section
* add image to intro slider
* move/animate survey message
* update survey link

--- a/bedrock/mozorg/templates/mozorg/home/home-a.html
+++ b/bedrock/mozorg/templates/mozorg/home/home-a.html
@@ -71,7 +71,7 @@
 
   <nav class="masthead-nav-page" id="nav-page">
     <ul id="nav-page-primary" class="primary">
-      <li id="nav-primary-action"><a href="#action" data-link-type="nav" data-link-name="Mozilla in Action"><span>{{ _('Mozilla In Action') }}</span></a></li>
+      <li id="nav-primary-people"><a href="#people" data-link-type="nav" data-link-name="Powered by People"><span>{{ _('Powered by People') }}</span></a></li>
       <li id="nav-primary-innovation"><a href="#innovation" data-link-type="nav" data-link-name="Web Innovation"><span>{{ _('Web Innovations') }}</span></a></li>
       <li id="nav-primary-firefox"><a href="#firefox" data-link-type="nav" data-link-name="Firefox anchor"><span>{{ _('Firefox') }}</span></a></li>
     </ul>
@@ -95,6 +95,7 @@
       <div class="slide" id="slide-one"></div>
       <div class="slide" id="slide-two"></div>
       <div class="slide" id="slide-three"></div>
+      <div class="slide" id="slide-four"></div>
     </div>
     <div class="content">
       <h2 class="intro-tagline">
@@ -103,7 +104,7 @@
     </div>
   </section>
 
-  <section class="section section-action" id="action">
+  <section class="section section-people" id="people">
     <div class="section-lead">
       <div class="content">
         <h2>{{ _('A network, hard at work') }}</h2>
@@ -167,8 +168,8 @@
       <div class="crater"></div>
       <div class="section-body">
         <div class="content">
-          <p>{{ _('With Firefox for desktop, iOS and Android, you can have a fast, reliable web experience everywhere you go. To sync your browser across all your devices, sign up for a Firefox Account today.') }}</p>
-          <p class="section-cta"><a href="{{ url('firefox.family.index') }}">{{ _('Discover more') }}</a></p>
+          <p>{{ _('Discover unlimited potential, endless possibility and a wide open Web.') }}</p>
+          <p class="section-cta"><a href="{{ url('firefox.family.index') }}">{{ _('Get Firefox today') }}</a></p>
         </div>
       </div>
     </div>{#--/.mission-control --#}
