--- a/media/css/mozorg/home/home-a.less
+++ b/media/css/mozorg/home/home-a.less
@@ -430,8 +430,8 @@ body {
                 }
             }
 
-            #nav-primary-action a:before {
-                background-image: url('/media/img/home/new/icon-action.svg');
+            #nav-primary-people a:before {
+                background-image: url('/media/img/home/new/icon-people.svg');
             }
 
             #nav-primary-innovation a:before {
@@ -633,6 +633,10 @@ body {
         #slide-three {
             background-image: url('/media/img/home/new/intro/intro-advocacy-1000.jpg');
         }
+
+        #slide-four {
+            background-image: url('/media/img/home/new/intro/intro-vr-1000.jpg');
+        }
     }
 
     @media @mq-desktop-wide {
@@ -647,12 +651,16 @@ body {
         #slide-three {
             background-image: url('/media/img/home/new/intro/intro-advocacy-2000.jpg');
         }
+
+        #slide-four {
+            background-image: url('/media/img/home/new/intro/intro-vr-2000.jpg');
+        }
     }
 }
 
 
-// Mozilla in action
-.section-action {
+// Powered by People
+.section-people {
     .invert-text;
     background: #00b086;
 }
