--- a/media/css/mozorg/home/survey.less
+++ b/media/css/mozorg/home/survey.less
@@ -5,14 +5,15 @@
 @import "../../pebbles/lib.less";
 
 #survey-message {
+    .border-box;
+    .font-size(12px);
     background: #fff0b3;
     display: none;
-    height: 30px;
-    line-height: 30px;
+    min-height: 30px;
     overflow: hidden;
-    width: 100%;
+    padding: 10px 20px;
     text-align: center;
-    font-size: 12px;
+    width: 100%;
 
     .survey-button {
         background-color: #00b6e0;
@@ -25,5 +26,22 @@
 
     @media only @mq-tablet {
         display: block;
+    }
+}
+
+.home-variant-a #survey-message {
+
+    &.stuck {
+        position: fixed;
+        bottom: 0;
+        z-index: 90;
+    }
+
+    @media only @mq-tablet and (min-height: 500px) {
+        padding-left: 260px;
+    }
+
+    @media only @mq-desktop and (min-height: 500px) {
+        padding-left: 380px;
     }
 }
