[fix bug 1283043] Add survey to en-US home page.

--- a/bedrock/mozorg/templates/mozorg/home/home.html
+++ b/bedrock/mozorg/templates/mozorg/home/home.html
@@ -46,6 +46,10 @@
     {% javascript 'matchmedia_addlistener' %}
   <![endif]-->
   {% javascript 'home' %}
+
+  {% if LANG == 'en-US' %}
+    {% include 'mozorg/home/includes/survey.html' %}
+  {% endif %}
 {% endblock %}
 
 {% block string_data %}
