[fix bug 1283877] Mozilla newsletter landing page

--- a/media/css/pebbles/base.less
+++ b/media/css/pebbles/base.less
@@ -63,6 +63,28 @@ ol.prose {
 }
 
 
+// Links
+a {
+    color: @color-link;
+    text-decoration: underline;
+
+    &:hover,
+    &:focus,
+    &:active,
+    &:visited:hover,
+    &:visited:focus,
+    &:visited:active {
+        color: darken(@color-link, 10%);
+        text-decoration: underline;
+    }
+
+    &:visited {
+        color: lighten(desaturate(@color-link, 50%), 20%);
+    }
+}
+
+
+// Standard content blocks
 .section,
 .content {
     .clearfix;
