--- a/media/css/pebbles/lib.less
+++ b/media/css/pebbles/lib.less
@@ -51,13 +51,15 @@
 // Text colors
 @color-text-primary:   #444;
 @color-text-secondary: #484848;
+@color-text-tertiary:  #666;
 
 // Brand colors
 @color-mozred:  #c13832;
 @color-mozblue: #0c99d5;
 @color-mozgray: #56565a;
 
-
+// Link colors
+@color-link: #0096dd; // blue (normal links)
 
 // Media queries
 @mq-desktop-wide:   ~'screen and (min-width: 1400px)';
