--- a/media/css/foundation/foundation.less
+++ b/media/css/foundation/foundation.less
@@ -56,6 +56,10 @@ img {
   height: auto;
 }
 
+a.go {
+  .trailing-arrow;
+}
+
 #video-description,
 .video-description {
   margin: 1em @gridGutterWidth 1.5em;
