Fixes bug #1283271 - updated /foundation page content

--- a/media/css/foundation/foundation.less
+++ b/media/css/foundation/foundation.less
@@ -56,6 +56,23 @@ img {
   height: auto;
 }
 
+ol {
+  ul {
+    list-style-type: disc;
+  }
+}
+
+ul + p {
+  margin-top: @baseLine;
+}
+
+.example-link {
+  &:after {
+    content: "»";
+    margin-left: .3em;
+  }
+}
+
 #video-description,
 .video-description {
   margin: 1em @gridGutterWidth 1.5em;
