[no bug] Add Robin Puri's full name to web bounty HOF list

--- a/bedrock/security/templates/security/bug-bounty/web-hall-of-fame.html
+++ b/bedrock/security/templates/security/bug-bounty/web-hall-of-fame.html
@@ -46,7 +46,7 @@
             <li>Muhammed Gamal</li>
             <li>Paresh</li>
             <li>Rafael</li>
-            <li>Robin Puri</li>
+            <li>Robin Puri (Deep Inder Singh Puri)</li>
             <li>seb0</li>
             <li>Sergey Bobrov</li>
             <li>Tom Prince</li>
