--- a/media/css/firefox/releasenotes-firefox.less
+++ b/media/css/firefox/releasenotes-firefox.less
@@ -566,8 +566,11 @@ ul.section-items {
         display: none;
     }
 }
-
-.windows,
+.firefox-old {
+    .download-buttons .firefox-old-cta {
+       display: block;
+    }
+}
 .non-firefox {
     .download-buttons .non-firefox-cta {
         display: block;
