[fix bug 1275629] Add survey to home prototype B.

--- a/bedrock/mozorg/templates/mozorg/home/home-b.html
+++ b/bedrock/mozorg/templates/mozorg/home/home-b.html
@@ -262,4 +262,7 @@
 
 {% block js %}
   {% javascript 'home-b' %}
+
+  {# survey is en-US only - enforced via optimizely audience segmentation #}
+  {% include 'mozorg/home/includes/survey-b.html' %}
 {% endblock %}
