--- a/media/css/mozorg/home/survey.less
+++ b/media/css/mozorg/home/survey.less
@@ -29,13 +29,15 @@
     }
 }
 
-.home-variant-a #survey-message {
+.home-variant #survey-message {
     &.stuck {
         position: fixed;
         bottom: 0;
         z-index: 90;
     }
+}
 
+.home-variant-a #survey-message {
     @media only @mq-tablet and (min-height: 500px) {
         padding-left: 260px;
     }
